--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,8 @@
-.inter-400 {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings: "slnt" 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;400&display=swap');
 
-:root {
-    --primary-color: #f0f0f0;
-    --primary-bg-color: #111217;
-    --secondary-bg-color: #28292E;
-    --border-color: #28292E;
-    --title-color: #f0f0f0;
-    --text-color: #9A9A9C;
-    --link-color: #9A9A9C;
-    --icon-color: #C7C8C9;
-
+html[data-theme='light'] .brand_logo {
+    filter: invert(1);
 }
 
 * {
@@ -24,14 +11,108 @@
     box-sizing: border-box;
     vertical-align: baseline;
     list-style: none;
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary-bg-color) transparent;
 }
 
 body{
     background: var(--primary-bg-color);
+    font-family:'Inter', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--text-color);
 }
 
 i {
     color: var(--icon-color);
+}
+
+a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+a:hover {
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
+p {
+    font-size: 1.25rem;
+    text-align: justify;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 2.5rem 1rem;
+}
+
+footer {
+    margin-bottom: 5rem;
+}
+  
+footer p {
+    font-size: .875rem;
+    text-align: center;
+    margin-bottom: 5rem;
+    padding: 1rem;
+}
+
+b {
+    font-weight: 400;
+}
+
+h1 {
+    font-size: 2.5rem;
+    font-weight: 200;
+}
+
+h1, h2, h3 {
+    font-family: 'League Spartan', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    color: var(--title-color);
+    font-weight: 200;
+}
+
+.inter-400 {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "slnt" 0;
+}
+
+:root, :root[data-theme='dark'] {
+    --primary-color: #f0f0f0;
+    --primary-bg-color: #111217;
+    --secondary-bg-color: #28292E;
+    --primary-border-color: #28292E;
+    --secondary-border-color: #56575A;
+    --title-color: #f0f0f0;
+    --text-color: #9A9A9C;
+    --link-color: #9A9A9C;
+    --icon-color: #C7C8C9;
+}
+
+:root, :root[data-theme='light'] {
+    --primary-color: #0B0B0F;
+    --primary-bg-color: #E9E9E9;
+    --secondary-bg-color: #C7C8C9;
+    --primary-border-color: #C7C8C9;
+    --secondary-border-color: #C7C8C9;
+    --title-color: #0B0B0F;
+    --text-color: #28292E;
+    --link-color: #28292E;
+    --icon-color: #56575A;
+}
+
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--secondary-bg-color);
+    border-radius: 50rem;
 }
 
 .header {
@@ -51,6 +132,8 @@ i {
 #toggleTheme {
     font-size: 1.5rem;
     color: var(--primary-color);
+    cursor: pointer;
+    transition: ease-in-out 1s;
 }
 
 .menu {
@@ -69,7 +152,7 @@ i {
     position: fixed;
     bottom: 0;
     justify-content: space-between;
-    border-top: 1px solid var(--border-color);
+    border-top: 1px solid var(--primary-border-color);
     margin-bottom: 0;
 }
 
@@ -82,7 +165,9 @@ i {
 }
 
 .menu_link.active .menu_icon, 
-.menu_link.active .menu_text {
+.menu_link.active .menu_text,
+.menu_link:hover .menu_icon, 
+.menu_link:hover .menu_text {
     color: var(--primary-color);
     font-weight: 600;
 }
@@ -101,8 +186,176 @@ i {
     text-transform: uppercase;
 }
 
+.menu_principal {
+    gap: 1rem;
+    margin-bottom: 0;
+}
+
+.menu_social {
+    gap: 1rem;
+}
+
+
+.header_nav {
+    display: none;
+}
+
+.header_toggle {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    width: 100%;
+    background: transparent;
+    border-radius: 3.125rem;
+    padding: 0.875rem 1.5rem;
+}
+
+.btn span,
+.btn i {
+    font-size: 1.25rem;
+    text-transform: uppercase;
+}
+
+.btn:hover {
+    transform: scale(1.05);
+    transition: ease-in-out .3s;
+}
+
+.btn_primary {
+    border: 1px solid var(--primary-color)
+}
+
+.btn_primary span {
+    color: var(--primary-color);
+
+}
+
+.main_content1 {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.main_content2 iframe {
+    width: 100%;
+    aspect-ratio: 16/9;
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.25rem;
+    padding: 6.25rem 1rem 2rem 1rem;
+    background: var(--secondary-bg-color);
+    margin-top: -5.5rem;
+}
+
+.skills h2{
+    font-size: 2rem;
+    text-transform: none;
+}
+
+.skill_list {
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: .5rem;
+}
+
+.skill_item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 4.8rem;
+    height: 4.8rem;
+    aspect-ratio: 1/1;
+    border: 1px solid var(--secondary-border-color);
+    border-radius: 50rem;
+}
+
+.skill_logo {
+    height: 3rem;
+}
+
+.filter-dark {
+    filter: invert(32%) sepia(9%) saturate(185%) hue-rotate(187deg) brightness(93%) contrast(82%);
+}
+
+.filter-light {
+
+}
+
 @media (min-width: 768px) {
+
+    .header {
+        position: fixed;
+        border-bottom: 1px solid var(--primary-border-color);
+        padding: 1rem 6rem;
+        background: var(--primary-bg-color);
+    }
+
     .menu_mobile{
         display: none;
+    }
+
+    .header_nav{
+        display: flex;
+    }
+
+    .header_nav,
+    .header_toggle {
+        min-width: 30%;
+    }
+
+    .main_content1{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem;
+    }
+
+    .skills {
+        padding: 6.25rem 6rem 2rem 6rem;
+        margin-top: -6rem;
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    main, .projects, .about {
+        padding: 8rem 6rem 4rem 6rem;
+    }
+
+    footer {
+        margin: 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .main_content1 {
+        width: auto;
+    }
+}
+
+@media (min-width: 1400px) {
+    .header {
+        position: fixed;
+        border-bottom: 1px solid var(--primary-border-color);
+        padding: 1rem 15rem;
+    }
+
+    main {
+        padding: 12rem 15rem 2rem
     }
 }
